WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167338
The Score Esports crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=167338
Summary
The Score Esports crashes on launch
Anders Carlsson
Reported
2017-01-23 15:52:18 PST
The Score Esports crashes on launch
Attachments
Patch
(2.97 KB, patch)
2017-01-23 15:53 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2017-01-23 15:53:52 PST
Created
attachment 299549
[details]
Patch
Anders Carlsson
Comment 2
2017-01-24 09:30:31 PST
Committed
r211086
: <
http://trac.webkit.org/changeset/211086
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug