The Score Esports crashes on launch https://bugs.webkit.org/show_bug.cgi?id=167338 rdar://problem/29948645

Reviewed by Dan Bernstein.

Source/WebKit2:

* Shared/Cocoa/WKObject.mm:
(+[WKObject conformsToProtocol:]):
Add a class method implementation in case an app ends up calling +[WKObject conformsToProtocol:] for some reason.

Tools:

* TestWebKitAPI/Tests/WebKit2Cocoa/WKObject.mm:
(TestWebKitAPI::TEST):
Add a test.

Canonical link: https://commits.webkit.org/184398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211086 268f45cc-cd09-0410-ab3c-d52691b4dbfc